--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,3 +72,11 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
+
+  mongodb:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: rootpassword
+    ports:
+      - "27017:27017"
