--- a/StreamProcessor/src/main/resources/application.yaml
+++ b/StreamProcessor/src/main/resources/application.yaml
@@ -10,6 +10,8 @@ management:
 spring:
   main:
     banner-mode: off
-
-
-
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: mongo
