--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,5 +78,6 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: rootpassword
+      MONGO_INITDB_DATABASE: mongo
     ports:
       - "27017:27017"
